welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:26: error: value GREEEN is not a member of object java.awt.Color
      makeLittlePattern(Color.GREEEN)
                              ^